--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,5 @@
     "prettier",
     "next"
   ],
-  "rules": {     "prettier/prettier": ["error", { "endOfLine": "auto" }]   }
+  "rules": {"prettier/prettier": ["error", { "endOfLine": "auto" }],}
 }
